# graphora

./: Dockerfile  Graphora.py  Home.py  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
data/: 4_📈_Result_Interpretation.py  X_train.csv  data_dictionary.xlsx  scoring & submission format.xlsx  train_and_val.csv  training.xlsx
data/dia-phuong/: THCS.csv  THPT.csv  tieu-hoc.csv
data/mau-giao/: MG.csv  tong-quan-MG.csv
data/tong-quan/: chi-so-phat-trien.csv  tong-quan-all.csv  tong-quan.csv
data_1/company/: company_affiliates.csv  company_info.csv  company_officers.csv  company_shareholders.csv  company_subsidiaries.csv
data_1/data_v2/dia-phuong/: sl-gvtt.csv  sl-lop.csv  sl-truong.csv
data_1/data_v2/mau-giao/: tong-quan.csv  truong-lop-gv-hs.csv
data_1/data_v2/tong-quan/: lop-gv-hs.csv  sl-nu-gv-hs.csv
data_1/finance/: balance_sheets.csv  cash_flows.csv  financial_ratios.csv  income_statements.csv
data_1/finance/2020-2024/: banlance_sheets_2020_2024.csv  cash_flows_2020_2024.csv  financial_2020_2024.csv  income_statements_2020_2024.csv
data_1/fund/: asset_holding.csv  funds.csv  industry_holding.csv  nav_report.csv  top_holding.csv
data_1/listing/: industries.csv  symbols-by-exchange.csv  symbols-by-industries.csv  symbols.csv
data_1/listing/symbols_by_group/: symbols-BOND.csv  (+18 more)
data_1/quote/: price_depth.csv  price_per_month_2020_2024.csv
pages/: 1_Data_Wrangling.py  1_🏗️_Data_Wrangling.py  2_EDA.py  2_📊_EDA.py  3_Dashboard.py  3_📈_Dashboard.py  4_AI_Assistant.py  4_🤖_AI_Assistant.py
tmp/: ai.py
utils/: config.py  data_loader.py
